Added CommentController, AdminController and moved whole backend to backend folder